2926 Update JVM arguments to include dynamic agent loading for tests